--- a/assets/css/pages/index.sass
+++ b/assets/css/pages/index.sass
@@ -1,7 +1,9 @@
 $header-color: #ddd
+$header-padding: 20px
 
 $sidebar-color: #c9c
 $sidebar-width: 250px
+$sidebar-padding: 50px
 
 $content-color: #cc9
 $content-padding: 50px
@@ -15,21 +17,21 @@ body, html
     background: $sidebar-color
 
     #header
+        padding: $header-padding
         background: $header-color
 
     #wrap
         padding-right: $sidebar-width
         #sidebar
+            //position: fixed
+            position: absolute
             background: $sidebar-color
-            float: left
             width: $sidebar-width
+            padding: $sidebar-padding
         #content
-            padding: 10px
-            margin: 0 (-$sidebar-width - 2*$content-padding) 0 auto
-            width: 100%
+            position: absolute
+            left: $sidebar-width
+            right: 0
+            padding: $content-padding
             background: $content-color
-            float: right
-    #footer
-        background: $footer-color
-        clear: both
 
