refactor views a bit, add sliders

--- a/assets/css/pages/index.sass
+++ b/assets/css/pages/index.sass
@@ -35,3 +35,6 @@ body, html
             padding: $content-padding
             background: $content-color
 
+.slider-input
+    .slider-name
+        margin-right: 10px
