--- a/views/index.jade
+++ b/views/index.jade
@@ -17,7 +17,7 @@ html
           | ...
       #content
         .vectors-intro
-          include vectors/intro.jade
+          include pages/vectors/intro.jade
     //#footer
       p Footer
     != js('app.js')
