hidden class, init in document ready

--- a/assets/css/pages/vectors/intro.sass
+++ b/assets/css/pages/vectors/intro.sass
@@ -1,40 +1,2 @@
-$header-color: #ddd
-$header-padding: 20px
 
-$sidebar-color: #c9c
-$sidebar-width: 250px
-$sidebar-padding: 50px
-
-$content-color: #cc9
-$content-padding: 50px
-
-$footer-color: #9c9
-
-body, html
-    margin: 0
-    padding: 0
-    color: #000
-    background: $sidebar-color
-
-    #header
-        padding: $header-padding
-        background: $header-color
-
-    #wrap
-        padding-right: $sidebar-width
-        #sidebar
-            //position: fixed
-            position: absolute
-            background: $sidebar-color
-            width: $sidebar-width
-            padding: $sidebar-padding
-        #content
-            position: absolute
-            left: $sidebar-width
-            right: 0
-            padding: $content-padding
-            background: $content-color
-
-.slider-input
-    .slider-name
-        margin-right: 10px
+// css specific to intro here
