--- a/views/index.jade
+++ b/views/index.jade
@@ -16,7 +16,7 @@ html
             a(href='#') Matrices
           | ...
       #content
-        .vectors-intro
+        #vectors-intro.hidden
           include pages/vectors/intro.jade
     //#footer
       p Footer
