hooking up slider inputs to vector arrow

--- a/views/pages/vectors/intro.jade
+++ b/views/pages/vectors/intro.jade
@@ -1,13 +1,13 @@
-.slider-input.sliderX
+.slider-input
   span.slider-name X
-  input#sliderX(type='range', min='-10' max='10' step='1')
+  input.sliderX(type='range', min='-10' max='10' step='1')
 
 .slider-input
   span.slider-name Y
-  input#sliderY(type='range', min='-10' max='10' step='1')
+  input.sliderY(type='range', min='-10' max='10' step='1')
 
 .slider-input
   span.slider-name Z
-  input#sliderZ(type='range', min='-10' max='10' step='1')
+  input.sliderZ(type='range', min='-10' max='10' step='1')
 
 canvas#mainCanvas
