primitive table of contents logic

--- a/views/index.jade
+++ b/views/index.jade
@@ -9,12 +9,7 @@ html
     #wrap
       #sidebar
         h3 Table of Contents
-        ul
-          li
-            a(href='#') Vectors
-          li
-            a(href='#') Matrices
-          | ...
+        ul#table_of_contents
       #content
         #vectors-intro.hidden
           include pages/vectors/intro.jade
