--- a/views/pages/vectors/intro.jade
+++ b/views/pages/vectors/intro.jade
@@ -4,7 +4,7 @@
 
 .slider-input
   span.slider-name X
-  input.sliderX(type='range', min=min, max=max, step=step)
+  input.sliderX(type='range', min=min, max=max, step=step, value=100)
 
 .slider-input
   span.slider-name Y
