colors and values on the sliders

--- a/assets/css/pages/index.sass
+++ b/assets/css/pages/index.sass
@@ -39,6 +39,13 @@ body, html
     .slider-name
         margin-right: 10px
 
+.slider-Xinput
+    color: red
+.slider-Yinput
+    color: green
+.slider-Zinput
+    color: blue
+
 .hidden
-  display: none
-  visibility: hidden
+    display: none
+    visibility: hidden
