link to the main page, add some brief content

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,8 @@ html
     !=css('app.css')
   body
     #header
-        h1 Eigen see clearly now
+        h1
+          a(href='/') Eigen see clearly now
     #wrap
       #sidebar
         h3 Table of Contents
