--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,12 @@
 extends layout
 
 block content
-  h1 Welcome!
+  h2 About
+  p
+    | EigenSeeClearlyNow is a project to help anyone learning linear algebra visualize its concepts.
+    | It is not intended to be used a stand-alone learning tool.
+
+  h2 Source Code
+  p This project is completely open source.  Feel free to contribute!
+  a(href='https://github.com/WuTheFWasThat/EigenSeeClearlyNow') Click here to view on Github
+
