make renderer use existing canvas size.  added bootstrap and restyled some

--- a/views/pages/vectors/intro.jade
+++ b/views/pages/vectors/intro.jade
@@ -1,28 +1,30 @@
 extends ../../layout
 
 block content
-  canvas#mainCanvas
+  .row
+    .col-md-6
+      canvas#canvas(style='width:500px;height:500px')
 
-  - var min = -100
-  - var max = 100
-  - var step = 10
+    - var min = -100
+    - var max = 100
+    - var step = 10
 
-  .well
-    .slider-input.slider-Xinput
-      span.slider-name X
-      input#sliderX(type='range', min=min, max=max, step=step, value=100)
-      span#sliderXVal 100
+    .col-md-6
+      .well
+        .slider-input.slider-Xinput
+          span.slider-name X
+          input#sliderX(type='range', min=min, max=max, step=step, value=100)
+          span#sliderXVal 100
 
-    .slider-input.slider-Yinput
-      span.slider-name Y
-      input#sliderY(type='range', min=min, max=max, step=step)
-      span#sliderYVal 0
+        .slider-input.slider-Yinput
+          span.slider-name Y
+          input#sliderY(type='range', min=min, max=max, step=step)
+          span#sliderYVal 0
 
-    .slider-input.slider-Zinput
-      span.slider-name Z
-      input#sliderZ(type='range', min=min, max=max, step=step)
-      span#sliderZVal 0
-
+        .slider-input.slider-Zinput
+          span.slider-name Z
+          input#sliderZ(type='range', min=min, max=max, step=step)
+          span#sliderZVal 0
 
 block morefoot
   script.
