minor fixto copy and changed arrow to be pink for now

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ block content
   h2 About
   p
     | EigenSeeClearlyNow is a project to help anyone learning linear algebra visualize its concepts.
-    | It is not intended to be used a stand-alone learning tool.
+    | It is not intended to be used as a stand-alone learning tool.
 
   h2 Source Code
   p This project is completely open source.  Feel free to contribute!
