arrow keys control rotations

--- a/views/pages/vectors/intro.jade
+++ b/views/pages/vectors/intro.jade
@@ -4,6 +4,7 @@ block content
   .row
     .col-md-6
       canvas#canvas(style='width:500px;height:500px')
+      h4 Use arrow keys to rotate!
 
     - var min = -100
     - var max = 100
