more reasonable background colors

--- a/assets/css/pages/index.sass
+++ b/assets/css/pages/index.sass
@@ -2,14 +2,14 @@
 // page layout
 ///////////////////////////////////////////////////////////////////////////////
 
-$header-color: #ddd
+$header-color: #993366
 $header-padding: 20px
 
-$sidebar-color: #c9c
+$sidebar-color: #F0F0F0
 $sidebar-width: 250px
 $sidebar-padding: 25px
 
-$content-color: #cc9
+$content-color: #F0F0F0
 $content-padding: 50px
 
 $footer-color: #9c9
