add noWebGL message, mention three.js in readme

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,6 +11,8 @@ html
         h3 Table of Contents
         ul#table_of_contents
       #content
+        p#noWebGL.hidden.text-danger
+          | It looks like your browser doesn't support WebGL!  Graphics are much faster if you use a browser with WebGL support.
         block content
     //#footer
       p Footer
