--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,8 +11,22 @@ html
         h3 Table of Contents
         ul#table_of_contents
       #content
-        p#noWebGL.hidden.text-danger
-          | It looks like your browser doesn't support WebGL!  Graphics are much faster if you use a browser with WebGL support.
+        h4#noWebGL.hidden.text-danger
+          | It looks like your
+          = " "
+          span#noWebGLReason
+          = " "
+          | doesn't support
+          = " "
+          a(href='http://khronos.org/webgl/wiki/Getting_a_WebGL_Implementation') WebGL!
+          = "  "
+          | Graphics are much faster if you use a browser with WebGL support.
+          = "  "
+          a(href='http://get.webgl.org/') Get it now to shut me up forever!
+          = "  "
+          | Or
+          = " "
+          a#noWebGLDismiss(href='#') shut me up anyways!
         block content
     //#footer
       p Footer
