--- a/views/pages/vectors/intro.jade
+++ b/views/pages/vectors/intro.jade
@@ -10,22 +10,12 @@ block content
     - var max = 100
     - var step = 10
 
+    - var xval = 50
+    - var yval = 50
+    - var zval = 0
+
     .col-md-6
-      .well
-        .slider-input.slider-Xinput
-          span.slider-name X
-          input#sliderX(type='range', min=min, max=max, step=step, value=100)
-          span#sliderXVal 100
-
-        .slider-input.slider-Yinput
-          span.slider-name Y
-          input#sliderY(type='range', min=min, max=max, step=step)
-          span#sliderYVal 0
-
-        .slider-input.slider-Zinput
-          span.slider-name Z
-          input#sliderZ(type='range', min=min, max=max, step=step)
-          span#sliderZVal 0
+      +slider_input(min, max, step, xval, yval, zval)
 
 block morefoot
   script.
