improve slider input mixin

--- a/assets/css/pages/index.sass
+++ b/assets/css/pages/index.sass
@@ -43,13 +43,13 @@ body, html
 // inputs - sliders
 ///////////////////////////////////////////////////////////////////////////////
 
-.slider-input
+.slider-input-container
     .slider-name
         margin-right: 10px
-.slider-Xinput
+.slider-input-container-X
     color: red
-.slider-Yinput
+.slider-input-container-Y
     color: green
-.slider-Zinput
+.slider-input-container-Z
     color: blue
 
