--- a/views/pages/vectors/intro.jade
+++ b/views/pages/vectors/intro.jade
@@ -15,7 +15,7 @@ block content
     - var zval = 0
 
     .col-md-6
-      +slider_input(min, max, step, xval, yval, zval)
+      +slider_input('vectorInput', min, max, step, xval, yval, zval)
 
 block morefoot
   script.
