--- a/views/utils/mixins.jade
+++ b/views/utils/mixins.jade
@@ -1,17 +1,17 @@
-mixin slider_input(min, max, step, xval, yval, zval)
-  .well
+mixin slider_input(id, min, max, step, xval, yval, zval)
+  .well(id=id)
 
-    .slider-input.slider-Xinput
+    .slider-input-container.slider-input-container-X
       span.slider-name X
-      input#sliderX(type='range', min=min, max=max, step=step, value=xval)
-      span#sliderXVal=xval
+      input.slider-input-X(type='range', min=min, max=max, step=step, value=xval)
+      span.slider-input-val-X=xval
 
-    .slider-input.slider-Yinput
+    .slider-input-container.slider-input-container-Y
       span.slider-name Y
-      input#sliderY(type='range', min=min, max=max, step=step, value=yval)
-      span#sliderYVal=yval
+      input.slider-input-Y(type='range', min=min, max=max, step=step, value=yval)
+      span.slider-input-val-Y=yval
 
-    .slider-input.slider-Zinput
+    .slider-input-container.slider-input-container-Z
       span.slider-name Z
-      input#sliderZ(type='range', min=min, max=max, step=step, value=zval)
-      span#sliderZVal=zval
+      input.slider-input-Z(type='range', min=min, max=max, step=step, value=zval)
+      span.slider-input-val-Z=zval
