--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,8 @@ html
   head
     title Eigen see clearly now
     !=css('app.css')
-  body
+    block morehead
+  body(class=bodyClass)
     #header
         h1
           a(href='/') Eigen see clearly now
@@ -13,22 +14,23 @@ html
         h3 Table of Contents
         ul#table_of_contents
       #content
-        h4#noWebGL.hidden.text-danger
-          | It looks like your
-          = " "
-          span#noWebGLReason
-          = " "
-          | doesn't support
-          = " "
-          a(href='http://khronos.org/webgl/wiki/Getting_a_WebGL_Implementation') WebGL!
-          = "  "
-          | Graphics are much faster if you use a browser with WebGL support.
-          = "  "
-          a(href='http://get.webgl.org/') Get it now to shut me up forever!
-          = "  "
-          | Or
-          = " "
-          a#noWebGLDismiss(href='#') shut me up anyways!
+        #noWebGL.well.hidden
+          h4.text-danger
+            | It looks like your
+            = " "
+            span#noWebGLReason
+            = " "
+            | doesn't support
+            = " "
+            a(href='http://khronos.org/webgl/wiki/Getting_a_WebGL_Implementation') WebGL!
+            = "  "
+            | Graphics are much faster if you use a browser with WebGL support.
+            = "  "
+            a(href='http://get.webgl.org/') Get it now to shut me up forever!
+            = "  "
+            | Or
+            = " "
+            a#noWebGLDismiss(href='#') shut me up anyways!
         block content
     //#footer
       p Footer
