fix links in TOC and header

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,11 +8,11 @@ html
   body(class=bodyClass)
     #header
         h1
-          a(href='/') Eigen see clearly now
+          a#header_link(href='/') Eigen see clearly now
     #wrap
       #sidebar
         h3 Table of Contents
-        ul#table_of_contents
+        #table_of_contents
       #content
         #noWebGL.well.hidden
           h4.text-danger
