--- a/assets/css/pages/index.sass
+++ b/assets/css/pages/index.sass
@@ -23,6 +23,8 @@ body, html
     #header
         padding: $header-padding
         background: $header-color
+        #header_link
+            text-decoration: none
 
     #wrap
         padding-right: $sidebar-width
