--- a/views/pages/vectors/addition.jade
+++ b/views/pages/vectors/addition.jade
@@ -19,30 +19,46 @@ block content
    .row
       h4 Use arrow keys to rotate!
 
-    - var min = -50
-    - var max = 50
-    - var step = 10
-
     - var xvalA = 25
     - var yvalA = 25
     - var zvalA = 25
-
-    .col-md-4
-      +slider_input('vectorA', min, max, step, xvalA, yvalA, zvalA)
 
     - var xvalB = 25
     - var yvalB = 25
     - var zvalB = -25
 
-    .col-md-4
-      +slider_input('vectorB', min, max, step, xvalA, yvalB, zvalB)
+    - var options = {}
+    - options.min = -100
+    - options.max = 100
+    - options.step = 10
 
-    - var xval = xvalA + xvalB
-    - var yval = yvalA + zvalB
-    - var zval = zvalA + zvalB
+    - options.x = xvalA
+    - options.y = yvalA
+    - options.z = zvalA
+    - options.color = 'FFFF66'
 
     .col-md-4
-      +slider_input('vectorSum', 2 * min, 2 * max, step, xval, yval, zval, true)
+      +slider_input('vectorA', options)
+
+    - options.x = xvalB
+    - options.y = yvalB
+    - options.z = zvalB
+    - options.color = '6699FF'
+
+    .col-md-4
+      +slider_input('vectorB', options)
+
+    - options.min = 2 * options.min
+    - options.max = 2 * options.max
+    - options.step = 2 * options.step
+    - options.x = xvalA + xvalB
+    - options.y = yvalA + zvalB
+    - options.z = zvalA + zvalB
+    - options.disabled = true
+    - options.color = '99FF66'
+
+    .col-md-4
+      +slider_input('vectorSum', options)
 
 block morefoot
   script.
