--- a/views/utils/mixins.jade
+++ b/views/utils/mixins.jade
@@ -1,17 +1,28 @@
-mixin slider_input(id, min, max, step, xval, yval, zval, disabled)
-  .well(id=id)
+mixin slider_input(id, options)
+  - var min = options.min || -100
+  - var max = options.max || 100
+  - var step = options.step || 10
+  - var x = options.x || 0
+  - var y = options.y || 0
+  - var z = options.z || 0
+  - var disabled = options.disabled || false
+  - var color = options.color || ''
 
+  - var stylestring = ''
+  - if (color) { stylestring += 'border: 10px solid ' + color + ';' }
+
+  .well(id=id, style=stylestring)
     .slider-input-container.slider-input-container-X
       = ' X = '
-      span.slider-input-val-X=xval
-      input.slider-input-X(type='range', min=min, max=max, step=step, value=xval, disabled=disabled)
+      span.slider-input-val-X=x
+      input.slider-input-X(type='range', min=min, max=max, step=step, value=x, disabled=disabled)
 
     .slider-input-container.slider-input-container-Y
       = ' Y = '
-      span.slider-input-val-Y=yval
-      input.slider-input-Y(type='range', min=min, max=max, step=step, value=yval, disabled=disabled)
+      span.slider-input-val-Y=y
+      input.slider-input-Y(type='range', min=min, max=max, step=step, value=y, disabled=disabled)
 
     .slider-input-container.slider-input-container-Z
       = ' Z = '
-      span.slider-input-val-Z=zval
-      input.slider-input-Z(type='range', min=min, max=max, step=step, value=zval, disabled=disabled)
+      span.slider-input-val-Z=z
+      input.slider-input-Z(type='range', min=min, max=max, step=step, value=z, disabled=disabled)
