fix slider input for sum to be reactive

--- a/views/pages/vectors/addition.jade
+++ b/views/pages/vectors/addition.jade
@@ -52,7 +52,7 @@ block content
     - options.max = 2 * options.max
     - options.step = 2 * options.step
     - options.x = xvalA + xvalB
-    - options.y = yvalA + zvalB
+    - options.y = yvalA + yvalB
     - options.z = zvalA + zvalB
     - options.disabled = true
     - options.color = '99FF66'
