vector -> vectors in bodyclass, document.ready before layout.coffee, require_tree for coffee pages

--- a/views/pages/vectors/addition.jade
+++ b/views/pages/vectors/addition.jade
@@ -1,7 +1,7 @@
 extends ../../layout
 
 block morehead
-  - var bodyClass = 'vector-addition'
+  - var bodyClass = 'vectors-addition'
 
 block content
   .row(style='position:relative')
