--- a/views/pages/vectors/intro.jade
+++ b/views/pages/vectors/intro.jade
@@ -7,7 +7,7 @@ block content
   .row
     .col-md-6
       canvas#canvas(style='width:500px;height:500px')
-      h4 Use arrow keys to rotate!
+      h4 Use arrow keys or mouse drag to rotate!  Use mousewheel to zoom.
 
     - var options = {}
     - options.min = -100
