various small fixes

--- a/views/pages/vectors/addition.jade
+++ b/views/pages/vectors/addition.jade
@@ -16,7 +16,7 @@ block content
     .col-md-4
       canvas#canvasC.center(style='width:300px;height:300px')
 
-   .row
+  .row(style='margin-top:10px')
     - var xvalA = 50
     - var yvalA = 50
     - var zvalA = -50
