canvas stays square when resizing

--- a/pages/vectors/intro/intro.jade
+++ b/pages/vectors/intro/intro.jade
@@ -6,7 +6,7 @@ block morehead
 block content
   .row
     .col-md-6
-      canvas#canvas(style='width:500px;height:500px')
+      canvas#canvas(style='width:100%;')
       h4 Use arrow keys or mouse drag to rotate!  Use mousewheel to zoom.
 
     - var options = {}
