--- a/pages/vectors/addition/addition.jade
+++ b/pages/vectors/addition/addition.jade
@@ -6,15 +6,15 @@ block morehead
 block content
   .row(style='position:relative')
     .col-md-4
-      canvas#canvasA.center(style='width:300px;height:300px')
+      canvas#canvasA.center(style='width:100%;')
     .col-md-1#plus
        div +
     .col-md-4
-      canvas#canvasB.center(style='width:300px;height:300px')
+      canvas#canvasB.center(style='width:100%;')
     .col-md-1#equals
        div =
     .col-md-4
-      canvas#canvasC.center(style='width:300px;height:300px')
+      canvas#canvasC.center(style='width:100%;')
 
   .row(style='margin-top:10px')
     - var xvalA = 50
