reorganize css on addition

--- a/pages/vectors/addition/addition.sass
+++ b/pages/vectors/addition/addition.sass
@@ -2,13 +2,17 @@ body.vectors-addition
 
   $fontsize: 40px
 
+  canvas
+    width: 100%
+    margin-bottom: 20px
+
   #plus, #equals
     position:absolute
     left: 33%
     top: 50%
     margin-left: -20px
     font-size: $fontsize
-    margin-top: (-$fontsize)
+    margin-top: (-$fontsize - 85)
 
   #plus
     left: 33%
