--- a/pages/vectors/addition/addition.jade
+++ b/pages/vectors/addition/addition.jade
@@ -4,56 +4,56 @@ block morehead
   - var bodyClass = 'vectors-addition'
 
 block content
+  - var xvalA = 50
+  - var yvalA = 50
+  - var zvalA = -50
+
+  - var xvalB = 50
+  - var yvalB = -50
+  - var zvalB = 0
+
+  - var options = {}
+  - options.min = -100
+  - options.max = 100
+  - options.step = 10
+
+
   .row(style='position:relative')
     .col-md-4
-      canvas#canvasA.center(style='width:100%;')
-    .col-md-1#plus
-       div +
-    .col-md-4
-      canvas#canvasB.center(style='width:100%;')
-    .col-md-1#equals
-       div =
-    .col-md-4
-      canvas#canvasC.center(style='width:100%;')
+      canvas#canvasA.center
 
-  .row(style='margin-top:10px')
-    - var xvalA = 50
-    - var yvalA = 50
-    - var zvalA = -50
-
-    - var xvalB = 50
-    - var yvalB = -50
-    - var zvalB = 0
-
-    - var options = {}
-    - options.min = -100
-    - options.max = 100
-    - options.step = 10
-
-    - options.x = xvalA
-    - options.y = yvalA
-    - options.z = zvalA
-    - options.color = 'FFFF66'
-
-    .col-md-4
+      - options.x = xvalA
+      - options.y = yvalA
+      - options.z = zvalA
+      - options.color = 'FFFF66'
       +slider_input('vectorA', options)
 
-    - options.x = xvalB
-    - options.y = yvalB
-    - options.z = zvalB
-    - options.color = '6699FF'
+    .col-md-1#plus
+       div +
 
     .col-md-4
+      canvas#canvasB.center
+
+      - options.x = xvalB
+      - options.y = yvalB
+      - options.z = zvalB
+      - options.color = '6699FF'
       +slider_input('vectorB', options)
 
-    - options.min = 2 * options.min
-    - options.max = 2 * options.max
-    - options.x = xvalA + xvalB
-    - options.y = yvalA + yvalB
-    - options.z = zvalA + zvalB
-    - options.disabled = true
-    - options.color = '99FF66'
+    .col-md-1#equals
+       div =
 
     .col-md-4
+      canvas#canvasC.center
+
+      - options.min = 2 * options.min
+      - options.max = 2 * options.max
+      - options.x = xvalA + xvalB
+      - options.y = yvalA + yvalB
+      - options.z = zvalA + zvalB
+      - options.disabled = true
+      - options.color = '99FF66'
+
       +slider_input('vectorSum', options)
+
 
