removing individual vector canvases from commutativity

--- a/pages/vectors/commutativity/commutativity.jade
+++ b/pages/vectors/commutativity/commutativity.jade
@@ -44,7 +44,7 @@ block content
        div =
 
     .col-md-4
-      canvas#canvasC.center(style='width:100%;')
+      canvas#sumCanvas.center(style='width:100%;')
 
       - options.min = 2 * options.min
       - options.max = 2 * options.max
