--- a/pages/vectors/commutativity/commutativity.sass
+++ b/pages/vectors/commutativity/commutativity.sass
@@ -2,15 +2,6 @@ body.vectors-commutativity
 
   $fontsize: 40px
 
-  #plus, #equals
-    position:absolute
-    left: 33%
-    top: 50%
-    margin-left: -20px
-    font-size: $fontsize
-    margin-top: (-$fontsize)
+  canvas
+    width: 100%
 
-  #plus
-    left: 33%
-  #equals
-    left: 66%
