fix colors on firefox

--- a/pages/vectors/addition/addition.jade
+++ b/pages/vectors/addition/addition.jade
@@ -25,7 +25,7 @@ block content
       - options.x = xvalA
       - options.y = yvalA
       - options.z = zvalA
-      - options.color = 'FFFF66'
+      - options.color = '#FFFF66'
       +slider_input('vectorA', options)
 
     .col-md-1#plus
@@ -37,7 +37,7 @@ block content
       - options.x = xvalB
       - options.y = yvalB
       - options.z = zvalB
-      - options.color = '6699FF'
+      - options.color = '#6699FF'
       +slider_input('vectorB', options)
 
     .col-md-1#equals
@@ -52,7 +52,7 @@ block content
       - options.y = yvalA + yvalB
       - options.z = zvalA + zvalB
       - options.disabled = true
-      - options.color = '99FF66'
+      - options.color = '#99FF66'
 
       +slider_input('vectorSum', options)
 
