--- a/pages/vectors/commutativity/commutativity.jade
+++ b/pages/vectors/commutativity/commutativity.jade
@@ -24,13 +24,13 @@ block content
       - options.x = xvalA
       - options.y = yvalA
       - options.z = zvalA
-      - options.color = 'FFFF66'
+      - options.color = '#FFFF66'
       +slider_input('vectorA', options)
 
       - options.x = xvalB
       - options.y = yvalB
       - options.z = zvalB
-      - options.color = '6699FF'
+      - options.color = '#6699FF'
       +slider_input('vectorB', options)
 
       - options.min = 2 * options.min
@@ -39,7 +39,7 @@ block content
       - options.y = yvalA + yvalB
       - options.z = zvalA + zvalB
       - options.disabled = true
-      - options.color = '99FF66'
+      - options.color = '#99FF66'
 
       +slider_input('vectorSum', options)
 
