Get rid of stupid console.log in typeface, remove controls explanation from intro

--- a/views/index.jade
+++ b/views/index.jade
@@ -10,6 +10,9 @@ block content
     | EigenSeeClearlyNow is a project to help anyone learning linear algebra visualize its concepts.
     | It is not intended to be used as a stand-alone learning tool.
 
+  // h2 Controls
+    h4 Use arrow keys or mouse drag to rotate!  Use mousewheel to zoom.
+
   h2 Source Code
   p This project is completely open source.  Feel free to contribute!
   a(href='https://github.com/WuTheFWasThat/EigenSeeClearlyNow') Click here to view on Github
