--- a/pages/vectors/addition/addition.jade
+++ b/pages/vectors/addition/addition.jade
@@ -26,7 +26,7 @@ block content
       - options.y = yvalA
       - options.z = zvalA
       - options.color = '#FFFF66'
-      +slider_input('vectorA', options)
+      +vector_slider_input('vectorA', options)
 
     .col-md-1#plus
        div +
@@ -38,7 +38,7 @@ block content
       - options.y = yvalB
       - options.z = zvalB
       - options.color = '#6699FF'
-      +slider_input('vectorB', options)
+      +vector_slider_input('vectorB', options)
 
     .col-md-1#equals
        div =
@@ -54,6 +54,6 @@ block content
       - options.disabled = true
       - options.color = '#99FF66'
 
-      +slider_input('vectorSum', options)
+      +vector_slider_input('vectorSum', options)
 
 
