--- a/pages/vectors/commutativity/commutativity.jade
+++ b/pages/vectors/commutativity/commutativity.jade
@@ -31,13 +31,13 @@ block content
       - options.y = yvalA
       - options.z = zvalA
       - options.color = '#FFFF66'
-      +slider_input('vectorA', options)
+      +vector_slider_input('vectorA', options)
 
       - options.x = xvalB
       - options.y = yvalB
       - options.z = zvalB
       - options.color = '#6699FF'
-      +slider_input('vectorB', options)
+      +vector_slider_input('vectorB', options)
 
       - options.min = 2 * options.min
       - options.max = 2 * options.max
@@ -47,7 +47,7 @@ block content
       - options.disabled = true
       - options.color = '#99FF66'
 
-      +slider_input('vectorSum', options)
+      +vector_slider_input('vectorSum', options)
 
     .col-md-6
       canvas#sumCanvas.center
