create more general reactive class, use super

--- a/pages/vectors/intro/intro.jade
+++ b/pages/vectors/intro/intro.jade
@@ -17,4 +17,4 @@ block content
     - options.z = 0
 
     .col-md-6
-      +slider_input('vectorInput', options)
+      +vector_slider_input('vectorInput', options)
