--- a/views/includes/mathjax.jade
+++ b/views/includes/mathjax.jade
@@ -1,4 +1,4 @@
 script(type="text/x-mathjax-config").
   MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
-script(type="text/javascript", src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML")
+script(type="text/javascript", src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML")
 
