some styling for span game

--- a/assets/css/index.sass
+++ b/assets/css/index.sass
@@ -53,6 +53,17 @@ body, html
   &.slider-input-container-Z
      color: blue
 
+.constant-slider-input
+  .slider-input-val
+    width: 20px
+    display: inline-block
+  .slider-input
+    position: relative;
+    display: inline-block;
+    width: auto;
+    /* margin-left: 10px; */
+    left: 10px;
+
 canvas.center
     padding-left: 0
     padding-right: 0
