changing first input vector color for span game

--- a/pages/vector_spaces/span_game/span_game.jade
+++ b/pages/vector_spaces/span_game/span_game.jade
@@ -24,7 +24,7 @@ block content
 
     .col-md-6
       span $c_u = $
-      - options.color = '#FFFF66'
+      - options.color = '#99FF99'
       +constant_slider_input('coefficient1', options)
 
       br
