adding latex equations to span game

--- a/assets/css/index.sass
+++ b/assets/css/index.sass
@@ -64,7 +64,9 @@ body, html
     /* margin-left: 10px; */
     left: 10px;
 
-canvas.center
+canvas
+  width: 100%
+  &.center
     padding-left: 0
     padding-right: 0
     margin-left: auto
