--- a/pages/vector_spaces/span_game/span_game.sass
+++ b/pages/vector_spaces/span_game/span_game.sass
@@ -1,5 +1,9 @@
 body.vector_spaces-span_game
 
-  canvas
-    width: 100%
+  .basisEquation
+    padding-top: 20px
 
+  .incorrect
+    background-color: #AAAAAA
+  .correct
+    background-color: #FFFF66
