--- a/pages/vectors/commutativity/commutativity.jade
+++ b/pages/vectors/commutativity/commutativity.jade
@@ -30,13 +30,13 @@ block content
       - options.x = xvalA
       - options.y = yvalA
       - options.z = zvalA
-      - options.color = '#FFFF66'
+      - options.color = CONSTANTS.COLORS.LIGHT_YELLOW
       +vector_slider_input('vectorA', options)
 
       - options.x = xvalB
       - options.y = yvalB
       - options.z = zvalB
-      - options.color = '#6699FF'
+      - options.color = CONSTANTS.COLORS.LIGHT_BLUE
       +vector_slider_input('vectorB', options)
 
       - options.min = 2 * options.min
@@ -45,7 +45,7 @@ block content
       - options.y = yvalA + yvalB
       - options.z = zvalA + zvalB
       - options.disabled = true
-      - options.color = '#99FF66'
+      - options.color = CONSTANTS.COLORS.LIGHT_GREEN
 
       +vector_slider_input('vectorSum', options)
 
