--- a/assets/css/index.sass
+++ b/assets/css/index.sass
@@ -64,6 +64,11 @@ body, html
     /* margin-left: 10px; */
     left: 10px;
 
+.center
+    text-align: center
+    margin-left: auto
+    margin-right: auto
+
 canvas
   width: 100%
   &.center
